refactor: Downgrade to Java 17